--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --yellow: oklch(87.9% 0.169 91.605);
+  --header-font-color: oklch(70.5% 0.213 47.604);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,8 +16,68 @@
   }
 }
 
+html,
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Fredoka';
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+.bee {
+  position: fixed;
+  z-index: 9999;
+  pointer-events: none;
+}
+
+.buzz {
+  display: inline-block;
+  animation: buzz 0.5s ease-in-out infinite;
+}
+
+.bee-1 {
+  top: 29%;
+  left: -80px;
+  animation: fly1 30s linear infinite;
+  animation-delay: 0s;
+
+  transform: scaleX(-1);
+}
+
+@keyframes fly1 {
+  0% {
+    transform: translateX(0) translateY(0) scaleX(-1);
+    opacity: 0;
+  }
+  5% {
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(50vw) translateY(-30px) scaleX(-1);
+    opacity: 1;
+  }
+  95% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(110vw) translateY(0) scaleX(-1);
+    opacity: 0;
+  }
+}
+
+
+@keyframes buzz {
+  0%,
+  100% {
+    transform: translateY(0) rotate(0deg) scale(1);
+  }
+  25% {
+    transform: translateY(-2px) rotate(-5deg) scale(1.05);
+  }
+  50% {
+    transform: translateY(2px) rotate(5deg) scale(0.95);
+  }
+  75% {
+    transform: translateY(-1px) rotate(-3deg) scale(1.02);
+  }
 }
